--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.72.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "underscore": "^1.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
