--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.5",
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
+    "immutable": "^3.8.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -19,6 +20,9 @@
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.0.3",
+    "redux-form-immutable": "^6.3.2",
+    "redux-immutable": "^4.0.0",
+    "redux-immutablejs": "0.0.8",
     "redux-promise-middleware": "^4.4.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
