--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^4.10.0",
+    "eslint-plugin-react": "^7.4.0",
     "react-scripts": "1.0.13"
   },
   "dependencies": {
-    "axios": "^0.16.2",
+    "axios": "^0.17.0",
     "classnames": "^2.2.5",
     "escape-string-regexp": "^1.0.5",
     "form-serialize": "^0.7.2",
